# gedi

./: CMakeLists.txt  Pipfile  package.xml
launch/: icp.launch  open3d_icp.launch  registration.launch
scripts/: backbones  gedi.py  icp.py  reference_pub.py  registration.py
