<?xml version="1.0"?>
<package format="3">
  <name>gedi</name>
  <version>0.0.0</version>
  <description>The deepface_ros package</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank corp.</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export/>
</package>
